--- a/templates/preview.template.html
+++ b/templates/preview.template.html
@@ -12,23 +12,27 @@
         <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
         <meta name="theme-color" content="#ffffff">
         <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin-ext,vietnamese" rel="stylesheet">
-        <link href="/css/theme.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="/css/highlight/tomorrow.css">
+        <link id="theme" href="/css/theme.css" rel="stylesheet" type="text/css">
+        <link id="highlight" rel="stylesheet" href="/css/highlight/solarized-light.min.css">
         <link rel="stylesheet" href="/css/fontello.css">
         <link rel="stylesheet" href="/emoji/css/messenger.min.css">
         <link rel="stylesheet" href="/emoji/css/thinking.ext.css">
-        <script src="/js/highlight.pack.js"></script>
         <script src="/js/autosizing.js"></script>
-        <script src="/js/fetch.js"></script>
+      <!--   <script src="/js/fetch.js"></script> -->
+        <script src="/js/switch-theme.js"></script>
+        <script src="/js/highlight.min.js"></script>
         <script>
-        hljs.initHighlightingOnLoad();
+        hljs.highlightAll();
         </script>
+        
+
     </head>
     <body>
         <div class="header">
-          <a href="/"><span class="avatar"></span><span class="header-link">Huy's Blog</span></a> 
+          <a href="/"><span class="avatar"></span><span class="header-link">Journal</span></a> 
+          <span><input onclick="SwitchTheme()" type="checkbox" id="switch" />
+          <label class="label" for="switch">Toggle</label></span>
 
-          <a class="subscribe right" href="http://eepurl.com/cN5YDv" rel="noopener noreferrer" target="blank">Theo dõi blog này</a>
         </div>
         <div class="container">
             <div class="main">
@@ -41,14 +45,8 @@
             </div>
         </div>
 	    <div class="footer">
-        <p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img src="https://thefullsnack.com/img/by-nc-nd.png" height="15" /></a></p>
+        <p><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img src="/img/by-nc-nd.png" height="15" /></a></p>
         <p>Created with <i class="em em-coffee"></i> <a href="http://github.com/huytd/ristretto-rs">ristretto.rs</a></p>
-            <div class="social">
-                <a target="_blank" href="http://facebook.com/thefullsnackblog"><i class="icon-facebook-squared"></i></a>
-                <a target="_blank" href="http://twitter.com/huydotnet"><i class="icon-twitter-squared"></i></a>
-                <a target="_blank" href="http://github.com/huytd"><i class="icon-github-squared"></i></a>
-                <a target="_blank" href="https://thefullsnack.com/en"><i class="icon-emo-coffee"></i></a>
-            </div>
         </div>
         <script type="text/javascript" async src="/js/MathJax/MathJax.js?config=TeX-MML-AM_CHTML"></script>
         <script type="text/x-mathjax-config">
